Refact do DTO para manter o relacionamento com User